[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/UI Sprites/UilityUI/UtilityBG.png" type="Texture" id=1]
[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonNormal.png" type="Texture" id=2]
[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonHover.PNG" type="Texture" id=3]
[ext_resource path="res://UI/Watchson/UtilityUI/CameraUtilityUI.gd" type="Script" id=4]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/Network-Button-Normal.png" type="Texture" id=5]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/On-Off-Button_Normal.png" type="Texture" id=6]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/FeedSettings-Button_Normal.png" type="Texture" id=7]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/On-Off-Button_Hover.png" type="Texture" id=8]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/Network-Button-Hover.png" type="Texture" id=9]
[ext_resource path="res://UI/UI Sprites/UilityUI/Camera/FeedSettings--Button_Hover.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono MEDIUM.tres" type="DynamicFont" id=11]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono BOLD.tres" type="DynamicFont" id=12]

[node name="CameraUtility" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 368 )
texture = ExtResource( 1 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1083.0
margin_top = 53.0
margin_right = 1133.0
margin_bottom = 103.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="OnOff" type="TextureButton" parent="."]
margin_left = 256.0
margin_top = 256.0
margin_right = 406.0
margin_bottom = 406.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="FeedSettings" type="TextureButton" parent="."]
margin_left = 566.0
margin_top = 256.0
margin_right = 716.0
margin_bottom = 406.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="Network" type="TextureButton" parent="."]
margin_left = 845.0
margin_top = 241.0
margin_right = 995.0
margin_bottom = 391.0
grow_horizontal = 0
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="OnOffToggleSection" type="Control" parent="."]
margin_left = 640.0
margin_top = 360.0
margin_right = 680.0
margin_bottom = 400.0

[node name="InfoLabel" type="RichTextLabel" parent="OnOffToggleSection"]
margin_left = -410.0
margin_top = -42.0
margin_right = 422.0
margin_bottom = 46.0
custom_fonts/bold_font = ExtResource( 12 )
custom_fonts/normal_font = ExtResource( 11 )
bbcode_text = "Power back-up will turn the device back on in:"
text = "Power back-up will turn the device back on in:"

[node name="CountdownLabel" type="RichTextLabel" parent="OnOffToggleSection"]
margin_left = -44.0
margin_top = 56.0
margin_right = 44.0
margin_bottom = 174.0
custom_fonts/normal_font = ExtResource( 12 )
bbcode_enabled = true

[node name="OnOffLogo" type="Sprite" parent="OnOffToggleSection"]
position = Vector2( 0, -129 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
